syntax = "proto3";

package userservice.proto;

import "google/protobuf/wrappers.proto";

service UserServiceUser {
    rpc Create (GrpcCreateUserDto) returns (GrpcResponseDto);
}

message GrpcCreateUserDto {
    string id = 1;
    google.protobuf.StringValue first_name = 2;
    google.protobuf.StringValue last_name = 3;
}

message GrpcResponseDto {
    bool is_success = 1;
    google.protobuf.Int32Value error_code = 2;
}